Added HTML validation for each element

--- a/index.html
+++ b/index.html
@@ -16,17 +16,30 @@
         <!-- Full Name -->
         <div class="form-group">
           <label for="name">Full Name</label>
-          <input type="text" id="name" placeholder="Full Name" />
+          <input
+            type="text"
+            id="name"
+            placeholder="Full Name"
+            required
+            minlength="3"
+            maxlength="100"
+          />
         </div>
         <!-- Phone Number -->
         <div class="form-group">
           <label for="phone">Phone Number</label>
-          <input type="tel" id="phone" placeholder="555-555-5555" />
+          <input
+            type="tel"
+            id="phone"
+            placeholder="555-555-5555"
+            required
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+          />
         </div>
         <!-- Email Address -->
         <div class="form-group">
           <label for="email">Email Address</label>
-          <input type="email" id="email" placeholder="Email" />
+          <input type="email" id="email" placeholder="Email" required />
         </div>
         <!-- Website Url -->
         <div class="form-group">
@@ -34,13 +47,21 @@
           <input
             type="url"
             id="website"
-            placeholder="https://github.com/ks603"
+            placeholder="http://github.com/ks603"
+            required
           />
         </div>
         <!-- Password -->
         <div class="form-group">
           <label for="password1">Password</label>
-          <input type="password" id="password1" placeholder="Create Password" />
+          <input
+            type="password"
+            id="password1"
+            placeholder="(Min. 8 characters)"
+            required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+            title="Please include at least 1 uppercase, 1 lowercase, and 1 number"
+          />
         </div>
         <!-- Confirm Password -->
         <div class="form-group">
@@ -49,6 +70,8 @@
             type="password"
             id="password2"
             placeholder="Confirm Password"
+            required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
           />
         </div>
         <button type="submit">Register</button>
