--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>Sign Up Today!</h1>
       <!-- Form -->
-      <form id="form" novalidate>
+      <form id="form">
         <!-- Full Name -->
         <div class="form-group">
           <label for="name">Full Name</label>
@@ -20,6 +20,7 @@
             type="text"
             id="name"
             placeholder="Full Name"
+            name="name"
             required
             minlength="3"
             maxlength="100"
@@ -32,6 +33,7 @@
             type="tel"
             id="phone"
             placeholder="555-555-5555"
+            name="phone"
             required
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
           />
@@ -39,7 +41,13 @@
         <!-- Email Address -->
         <div class="form-group">
           <label for="email">Email Address</label>
-          <input type="email" id="email" placeholder="Email" required />
+          <input
+            type="email"
+            id="email"
+            placeholder="Email"
+            required
+            name="email"
+          />
         </div>
         <!-- Website Url -->
         <div class="form-group">
@@ -49,6 +57,7 @@
             id="website"
             placeholder="http://github.com/ks603"
             required
+            name="website"
           />
         </div>
         <!-- Password -->
@@ -70,6 +79,7 @@
             type="password"
             id="password2"
             placeholder="Confirm Password"
+            name="password"
             required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
           />
